--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,11 @@
             android:layout_height="wrap_content"
             android:text="Hello World!"/>
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvJadwalSholat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
